--- a/AIO_SER/src/main/resources/application.properties
+++ b/AIO_SER/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 #cache
 spring.cache.type=caffeine
-spring.cache.cache-names=menuCache,pagePerCache,perCache,userCache,dictCache
+spring.cache.cache-names=menuCache,pagePerCache,perCache,userCache,dictCache,roleCache
 spring.cache.caffeine.spec=maximumSize=3000, expireAfterWrite=180s
 
 #
